// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkBreadcrumbItem should render correctly 1`] = `
<li
  className="bpk-breadcrumb-item"
>
  <a
    className="bpk-link bpk-breadcrumb-item__link"
    href="https://backpack.github.io/"
    onClick={null}
    rel={null}
    target={null}
  >
    Backpack
  </a>
  <svg
    className="bpk-breadcrumb-item__arrow bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
    />
  </svg>
</li>
`;

exports[`BpkBreadcrumbItem should render correctly with a "active" prop 1`] = `
<li
  className="bpk-breadcrumb-item"
>
  <span
    aria-current="page"
    className="bpk-text bpk-text--base bpk-breadcrumb-item__active-item"
  >
    Backpack
  </span>
</li>
`;

exports[`BpkBreadcrumbItem should render correctly with a custom class name 1`] = `
<li
  className="bpk-breadcrumb-item my-custom-class"
>
  <a
    className="bpk-link bpk-breadcrumb-item__link"
    href="https://backpack.github.io/"
    onClick={null}
    rel={null}
    target={null}
  >
    Backpack
  </a>
  <svg
    className="bpk-breadcrumb-item__arrow bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
    />
  </svg>
</li>
`;

exports[`BpkBreadcrumbItem should render correctly with arbitrary props 1`] = `
<li
  className="bpk-breadcrumb-item"
  testID="arbitrary value"
>
  <a
    className="bpk-link bpk-breadcrumb-item__link"
    href="https://backpack.github.io/"
    onClick={null}
    rel={null}
    target={null}
  >
    Backpack
  </a>
  <svg
    className="bpk-breadcrumb-item__arrow bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
    />
  </svg>
</li>
`;

exports[`BpkBreadcrumbItem should render correctly with with "linkProps" attribute 1`] = `
<li
  className="bpk-breadcrumb-item"
>
  <a
    className="bpk-link bpk-breadcrumb-item__link"
    href="https://backpack.github.io/"
    onClick={null}
    rel={null}
    target={null}
    testID="arbitrary value"
  >
    Backpack
  </a>
  <svg
    className="bpk-breadcrumb-item__arrow bpk-icon--rtl-support"
    height="24"
    style={
      Object {
        "height": "1.5rem",
        "width": "1.5rem",
      }
    }
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
    />
  </svg>
</li>
`;
